prevent margin collapsing from child to parent
https://stackoverflow.com/questions/19718634/how-to-disable-margin-collapsing

--- a/Week1/QA-session-content/styles.css
+++ b/Week1/QA-session-content/styles.css
@@ -6,6 +6,7 @@ body {
 #header {
 	background: red;
 	height: 100vh;
+	overflow: auto;
 }
 
 #header h1 {
